--- a/index.html
+++ b/index.html
@@ -14,7 +14,40 @@
   </head>
   <body>
     <div class="app">
-      <aside class="sidebar"></aside>
+      <button class="icon-button open-toggle" id="btn-open">
+        <img src="assets/open.svg" alt="Abrir Menu" class="icon" />
+      </button>
+
+      <aside class="sidebar">
+        <header class="sidebar-header">
+          <img src="assets/logo.svg" alt="Logo" class="logo" />
+
+          <button class="icon-button" id="btn-collapse">
+            <img src="assets/collapse.svg" alt="Fechar Menu" class="icon" />
+          </button>
+        </header>
+
+        <div class="sidebar-content">
+          <div class="search-container">
+            <img
+              src="assets/search.svg"
+              alt="Buscar"
+              class="icon search-icon"
+            />
+
+            <input
+              type="text"
+              class="search-input"
+              id="search-input"
+              placeholder="Buscar por título"
+            />
+
+            <button class="btn-primary btn btn-full" id="btn-new">
+              Novo prompt
+            </button>
+          </div>
+        </div>
+      </aside>
 
       <main class="main">
         <header class="main-header">
@@ -57,5 +90,6 @@
         </div>
       </main>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
